# bazel-benchmarks

./: .gitignore  README.md
.github/workflows/: ci.yaml
rules_js-npm/: .gitignore  README.md  benchmark_1.sh  benchmark_2.sh  benchmark_3.sh  benchmark_4.sh  run_benchmark.sh  run_benchmarks.sh
rules_js-npm/npm_install/: WORKSPACE  package-lock.json  package.json
rules_js-npm/npm_translate_lock/: BUILD.bazel  WORKSPACE  package.json  pnpm-lock.yaml
rules_js-npm/yarn_install/: BUILD.bazel  WORKSPACE  package.json
rules_ts/: .bazelrc  .bazelversion  .gitignore  README.md  WORKSPACE  generate.sh  generator.js  package-lock.json  package.json  results  results_local_macos  run_benchmark.sh  run_benchmarks.sh  swc_transpiler.bzl
