load("@npm//:defs.bzl", "npm_link_all_packages")
load("@npm//uuid:package_json.bzl", "bin")

npm_link_all_packages(name = "node_modules")

# Simple target that deps on `:node_modules` so that `bazel build ...` links all npm packages
filegroup(
    name = "fg",
    srcs = [":node_modules"],
)

bin.uuid_binary(name = "uuid_bin")
